--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,5 +1,5 @@
 <h2>All tickets <span><%= link_to 'view fresh tickets', fresh_tickets_url %></span></h2>
 
-
+<div id="tickets">
 <%= render :partial => @tickets %>
-
+</div>
