--- a/app/views/faqs/new.html.erb
+++ b/app/views/faqs/new.html.erb
@@ -8,20 +8,20 @@
     <%= f.text_field :title %>
   </p>
   <p>
-    <%= f.label :body %><br />
-    <%= f.text_area :body %>
+    <%= f.label :category_id, 'Category' %><br />
+    <%= f.collection_select(:category_id, Category.find(:all), :id, :name, {:include_blank => true}) %>
   </p>
   <p>
     <%= f.label :url, 'External URL (leave blank to use body)' %><br />
     <%= f.text_field :url %>
   </p>
   <p>
-    <%= f.label :category_id %><br />
-    <%= f.text_field :category_id %>
+    <%= f.label :body %><br />
+    <%= f.text_area :body %>
   </p>
   <p>
-    <%= f.submit "Create" %>
+    <%= f.submit "Create" %> or <%= link_to 'go back', faqs_path %>
   </p>
 <% end %>
 
-<%= link_to 'Back', faqs_path %>
+
