--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -4,7 +4,10 @@
 <h2>Ticket <%=h @ticket.key %> <span><%= link_to 'customer view', view_by_key_url(@ticket.key) %></span></h2>
 
 <h3><%=h @ticket.subject %> <span>(<%=h @ticket.category.name %>)</span></h3>
-
+<div id="status">
+  <strong>Status: <%= @ticket.state %></strong>
+  <%= link_to_remote "I'm working on this", :url => research_ticket_url(@ticket) if @ticket.state == 'fresh' %>
+</div>
 <div class="ticket_body">
   <p class="timestamp">On <%= @ticket.created_at.to_s(:short) %> <%= mail_to @ticket.email, @ticket.name %> of <%= link_to @ticket.domain, @ticket.domain.match('http://') ? @ticket.domain : 'http://'+@ticket.domain %> wrote:</p>
   <%=h @ticket.body %>
