--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,11 @@
 
 <%= error_messages_for :user %>
 <% form_for :user, :url => users_path do |f| -%>
+
+<p><%= label_tag 'name' %><br/>
+<%= f.text_field :name %></p>
+
+
 <p><%= label_tag 'login' %><br/>
 <%= f.text_field :login %></p>
 
