--- a/app/views/help/contact.html.erb
+++ b/app/views/help/contact.html.erb
@@ -5,10 +5,10 @@
 <p>Considering a BIG Folio website or NextProof account? Please use our <%= link_to 'pre-sales contact form', 'http://bigfolio.com/contact/' %> for questions about our products and services. </p>
 
 <h2>Email Support</h2>
-<p>For the quickest response, please <%= link_to 'submit a support ticket', new_ticket_url %>. Tickets are routed to multiple staff members, ensuring a quick response. Replies to your ticket are emailed to you and visible in your browser.</p>
+<p>For the quickest response, please <%= link_to 'submit a support ticket', new_ticket_url %>. Tickets are routed to multiple staff members and replies are emailed to you and visible in your browser.</p>
+<h3>When should I expect a reply?</h3>
+<p>Our normal support hours are 8:30am to 5pm Pacific Time, Monday through Friday.</p>
+<p>Tickets submitted during evenings and weekends will receive a response the next business day. Emergency requests (e.g. site or email down) will be addressed as soon as possible.</p>
 <h2>Phone Support</h2>
-<p>If you prefer talking to a human being, please give us a call. </p>
-<p>Phone: (805) 504-1126 ext. 2</p>
-
-<h3>Phone Support Hours</h3>
-<p>Monday to Friday: 8am-5pm (Pacific Time)</p>
+<p>Phone support is available Monday to Friday: 8:30am-5pm (Pacific Time)</p>
+<h3>Phone: (805) 504-1126 ext. 3</h3>
