--- a/app/views/tickets/_ticket.html.erb
+++ b/app/views/tickets/_ticket.html.erb
@@ -1,10 +1,10 @@
 <% div_for ticket, :class => ticket.classes do %>
-  <h3><%= link_to ticket.subject, ticket %> <span><%= time_ago_in_words ticket.created_at %> ago</span></h3>
+  <h3><%= link_to ticket.subject.blank? ? ticket.key : ticket.subject, ticket %> <span><%= time_ago_in_words ticket.created_at %> ago</span></h3>
   <ul class='ticket_info'>
     <li></li>
     <li>by <%= mail_to ticket.email, ticket.name %></li>
     <li>account: <%= link_to ticket.domain, ticket.domain.match('http://') ? ticket.domain : 'http://'+ticket.domain %></li>
-    <li><%= link_to ticket.category.name, ticket.category %></li>
+    <% if ticket.category %><li><%= link_to ticket.category.name, ticket.category %></li><% end %>
     <li><%= link_to 'Delete', ticket, :confirm => 'Are you sure?', :method => :delete %></li>
     <% if ticket.state == 'fresh' %>
     <li id="<%= "researching_#{ticket.id}" %>"+><%= link_to_remote "I'm working on this", :url => research_ticket_path(ticket) %></li>
