--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,6 +66,7 @@
             <% end %></span></li>
       <% if current_user %>
       <li><%= link_to "Fresh tickets", fresh_tickets_url, :class=>"big_fresh" %></li>
+      <li><%= link_to "Active tickets", active_tickets_url, :class=>"big_active" %></li>
       <li><%= link_to "All tickets", tickets_url, :class=>"big_all" %></li>
       <li><span id="search_label"><a href="#" onclick="show_search()" class="big_search">Search tickets</a></span>
           <span id="search_form"><% form_tag(tickets_url, {:method => 'get'}) do %>
