--- a/app/views/tickets/fresh.html.erb
+++ b/app/views/tickets/fresh.html.erb
@@ -1,3 +1,3 @@
-<h2>Fresh tickets <span><%= link_to 'view all tickets', tickets_url %></span></h2>
+<h2><%= action_name.capitalize %> tickets <span><%= link_to 'view all tickets', tickets_url %></span></h2>
 
 <%= render :partial => @tickets %>
