--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,4 +1,5 @@
-<h2>All tickets <span><%= link_to 'view fresh tickets', fresh_tickets_url %></span></h2>
+<h2>All tickets <span><%= link_to 'view fresh tickets', fresh_tickets_url %></span>
+                <span><%= link_to 'view active tickets', active_tickets_url %></span></h2>
 
 <div id="tickets">
 <%= render :partial => @tickets %>
