style updated with pretty background gradient

--- a/public/stylesheets/bighelp.css
+++ b/public/stylesheets/bighelp.css
@@ -21,7 +21,7 @@ pre,code,kbd,samp,tt{font-family:monospace;*font-size:108%;line-height:100%;}
 
 
 body#help {
-	background: #333;
+	background: #DDD url(../images/site_bg.png) repeat-x fixed top left;
 }
 div.clear {
 	clear:both;
