--- a/public/stylesheets/bighelp.css
+++ b/public/stylesheets/bighelp.css
@@ -1,5 +1,5 @@
 /* These are the basic reset fonts styles (courtesy Yahoo! YUI) */
-html{color:#000;background:#333;height:100%;}
+html{color:#000;background:#DDD;height:100%;}
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}
 table{border-collapse:collapse;border-spacing:0;}
 fieldset,img{border:0;}
@@ -29,7 +29,7 @@ div.clear {
 div#container {
 	background: transparent url(../images/container_bg.png) repeat-y center left;
 	width:970px;
-	min-height:500px;
+	min-height:550px;
 	margin:0 auto;
 }
 div#header {
