changed mailer views to use the correct host

--- a/app/views/ticket_mailer/ticket_alert.rhtml
+++ b/app/views/ticket_mailer/ticket_alert.rhtml
@@ -21,4 +21,4 @@
 </table>
 <hr />
 
-<h3><%= link_to 'View and reply to this ticket', ticket_url(@ticket, :host => 'localhost', :port => '3000') %></h3>
+<h3><%= link_to 'View and reply to this ticket', ticket_url(@ticket, :host => 'bighelp2.bigfolio.com') %></h3>
