added bf logo and got rid of blue header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
         <% end %>
       </ul>
     </div>    
-    <h1><%= link_to 'Help System', root_url %></h1>
+    <h1><%= link_to image_tag('logo.jpg'), root_url %></h1>
   </div>
   
   <div id="right">
