changing styles up to match bigfolio.com more

--- a/app/views/help/index.html.erb
+++ b/app/views/help/index.html.erb
@@ -1,3 +1,8 @@
+<% content_for :main do %>
+<div id="splash">
+  <img class="alignnone size-full wp-image-739" title="Support Header" src="http://bigfolio.com/wp-content/uploads/2009/02/support.jpg" alt="Support Header" width="880" height="250" />
+</div>
+<% end %>
 <h2>Guidelines for Submitting a Support Ticket</h2>
 <p>At BIG Folio, our goal is to provide you with the best support in the industry. Our online support center allows us to effectively handle your requests. Please submit a ticket any time you need us to take action. For example:</p>
 <ul>
