--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,6 +59,8 @@
     <h1><%= link_to image_tag('logo.jpg'), root_url %></h1>
   </div>
   
+  <%= yield :main %>
+  
   <div id="right">
     
     <ul id="big">
