added rich text to faqs

--- a/app/views/faqs/new.html.erb
+++ b/app/views/faqs/new.html.erb
@@ -1,4 +1,7 @@
-<h1>New faq</h1>
+<% content_for :head do %>
+<%= javascript_include_tag :fckeditor %>
+<% end %>
+<h2>New faq</h2>
 
 <% form_for(@faq) do |f| %>
   <%= f.error_messages %>
@@ -15,10 +18,10 @@
     <%= f.label :url, 'External URL (leave blank to use body)' %><br />
     <%= f.text_field :url %>
   </p>
-  <p>
-    <%= f.label :body %><br />
-    <%= f.text_area :body %>
-  </p>
+  <p><%= f.label :body %></p>
+  <%= fckeditor_textarea(:faq, :body, :toolbarSet => 'Basic', :width => '90%', :height => '400px') %>
+  
+  
   <p>
     <%= f.submit "Create" %> or <%= link_to 'go back', faqs_path %>
   </p>
