--- a/app/views/faqs/edit.html.erb
+++ b/app/views/faqs/edit.html.erb
@@ -1,4 +1,8 @@
-<h1>Editing faq</h1>
+<% content_for :head do %>
+<%= javascript_include_tag :fckeditor %>
+<% end %>
+
+<h2>Editing faq</h2>
 
 <% form_for(@faq) do |f| %>
   <%= f.error_messages %>
@@ -7,13 +11,12 @@
     <%= f.label :title %><br />
     <%= f.text_field :title %>
   </p>
-  <p>
-    <%= f.label :body %><br />
-    <%= f.text_area :body %>
+  <p><%= f.label :body %></p>
+    <%= fckeditor_textarea(:faq, :body, :toolbarSet => 'Basic', :width => '90%', :height => '400px') %>
   </p>
   <p>
     <%= f.label :category_id %><br />
-    <%= f.text_field :category_id %>
+    <%= f.collection_select(:category_id, Category.find(:all), :id, :name, {:include_blank => true}) %>
   </p>
   <p>
     <%= f.submit "Update" %>
