added more help link to categories/ajax of faqs

--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -8,6 +8,10 @@
     <%= f.text_field :name %>
   </p>
   <p>
+    <%= f.label :help_url, 'More help URL' %><br />
+    <%= f.text_field :help_url %>
+  </p>
+  <p>
     <%= f.submit "Update" %>
   </p>
 <% end %>
