--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -41,3 +41,10 @@
     <%= f.submit "Create" %>
   </p>
 <% end %>
+
+<script type="text/javascript">
+  $('a[rel*=facebox]').facebox({
+    loading_image : 'loading.gif',
+    close_image   : 'closelabel.gif'
+  }) 
+</script>
