--- a/app/views/help/view_by_key.html.erb
+++ b/app/views/help/view_by_key.html.erb
@@ -32,3 +32,10 @@
     <%= f.submit "Create" %>
   </p>
 <% end %>
+
+<script type="text/javascript">
+  $('a[rel*=facebox]').facebox({
+    loading_image : 'loading.gif',
+    close_image   : 'closelabel.gif'
+  }) 
+</script>
