--- a/app/views/messages/_message.mobile.erb
+++ b/app/views/messages/_message.mobile.erb
@@ -1,5 +1,5 @@
 <% div_for message, :class => message.classes do %>
-  <p class="timestamp">On <%= message.created_at.to_s(:short) %> 
+  <p class="timestamp">On <%= message.created_at.strftime('%a %m/%d at %I:%M%p %Z') %> 
     <%= message.user ? message.user.name : 'someone' %> 
     wrote:</p>
     
