--- a/app/views/help/view_by_key.html.erb
+++ b/app/views/help/view_by_key.html.erb
@@ -6,7 +6,7 @@
 <h3><%=h @ticket.subject %> <span>(<%=h @ticket.category.name %>)</span></h3>
 
 <div class="ticket_body">
-  <p class="timestamp">On <%= @ticket.created_at.to_s(:short) %> <%= mail_to @ticket.email, @ticket.name %> of <%= link_to @ticket.domain, @ticket.domain.match('http://') ? @ticket.domain : 'http://'+@ticket.domain %> wrote:</p>
+  <p class="timestamp">On <%= @ticket.created_at.strftime('%a %m/%d at %I:%M%p %Z') %> <%= mail_to @ticket.email, @ticket.name %> of <%= link_to @ticket.domain, @ticket.domain.match('http://') ? @ticket.domain : 'http://'+@ticket.domain %> wrote:</p>
   <%=h @ticket.body %>
 </div>
 
