fixed bad form field id for browser/os

--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -55,7 +55,7 @@
     <%= f.label :os, 'Operating system' %><br />
     <%= f.select(:os, ['Mac OS X','Windows XP','Windows Vista','iPhone','Other'], {:include_blank => true}) %></p>
     <p><%= f.label :browser, 'Web browser' %><br />
-    <%= f.select(:os, ['Firefox','Internet Explorer','Safari','Other'], {:include_blank => true}) %>
+    <%= f.select(:browser, ['Firefox','Internet Explorer','Safari','Other'], {:include_blank => true}) %>
     </p>
     <p>
       <%= f.label :email_client, 'Email client' %><br />
