fixed IE bug for some pages ... caused by calling facebox before DOM was loaded

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,7 @@
 	<%= yield :head %>
 	<script type="text/javascript">
     jQuery(document).ready(function($) {
-      
-      
-       
+      $('a[rel*=facebox]').facebox({loading_image:'loading.gif',close_image:'closelabel.gif'});
     })
     
     function show_find() {
@@ -32,6 +30,9 @@
       $("#q").focus(function() {
         $(this).attr("value","");
       });
+    }
+    function doFaq(obj) {
+      $(obj).facebox();
     }
   </script>
 </head>
