--- a/app/views/help/_faq.html.erb
+++ b/app/views/help/_faq.html.erb
@@ -1,6 +1,6 @@
 <% div_for faq, :class => 'faq' do %>
 <h3>
-  <%= link_to(faq.title, faq.url.blank? ? faq : faq.url, :rel => faq.url.blank? ? 'facebox' : '_blank') %> 
+  <%= link_to(faq.title, faq.url.blank? ? '#' : faq.url, :rel => faq.url.blank? ? 'facebox' : '_blank', :onclick => faq.url.blank? ? "jQuery.facebox({ajax:'#{faq_path faq}'})" : "") %> 
   <span><%= link_to('edit', edit_faq_url(faq)) if current_user %>
   <%= link_to('delete', faq, :confirm => 'Are you sure?', :method => :delete) if current_user %></span>
 </h3>
